--- a/styles/app.css
+++ b/styles/app.css
@@ -3,6 +3,14 @@
   width: 1920px;
   height: 1080px; }
 
+.click_control, .select_control {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none; }
+
 .click_control:hover {
   cursor: pointer; }
 
