--- a/styles/app.scss
+++ b/styles/app.scss
@@ -4,8 +4,19 @@
   height: 1080px;
 }
 
+.click_control, .select_control{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;  
+}
+
 .click_control:hover{
   cursor: pointer;
+  
+  // prevent text select
 }
 
 
