--- a/styles/clients/demo.scss
+++ b/styles/clients/demo.scss
@@ -284,8 +284,11 @@ body{
 } // #weather_forecast
 
 //--- Tickers ---
-#tickers{
-  .ticker{
+// #tickers{
+  
+  
+  .nc_ticker{
+    display: none;
     li{
       font-size: 18pt;
     }
@@ -299,7 +302,7 @@ body{
     
   }
   
-}
+// }
 
 //--- Globals ---
 .nc_component{
