--- a/partials/ticker.html
+++ b/partials/ticker.html
@@ -1,7 +1,7 @@
-<div class="nc_component nc_ticker">
-    <ul class="ticker_list">
-        <li ng-repeat="tick in data">
-            {{tick}}
-        </li>
-    </ul>
+<div class="ticker_inner">
+    <!-- a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string  -->
+   <span class="ticker_item" ng-repeat="item in data">
+       {{item}}
+   </span>
 </div>
+
