--- a/styles/app.scss
+++ b/styles/app.scss
@@ -4,7 +4,7 @@
   height: 1080px;
 }
 
-.click_control, .select_control{
+.click_control, .select_control, .nc_ticker{
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -15,8 +15,11 @@
 
 .click_control:hover{
   cursor: pointer;
-  
-  // prevent text select
 }
 
-
+.nc_ticker{ 
+    overflow: hidden;
+    .ticker_inner{
+      overflow:hidden;
+    }
+}
