--- a/partials/ticker.html
+++ b/partials/ticker.html
@@ -1,4 +1,4 @@
-<div class="ticker_inner">
+<div class="ticker_inner nc_component">
     <!-- a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string a long string  -->
    <span class="ticker_item" ng-repeat="item in data">
        {{item}}
