--- a/partials/forecasts.html
+++ b/partials/forecasts.html
@@ -1,44 +1,50 @@
-<div class="forecast_local">
-    {{local}}    
+<div id="forecast_local">
+    <span class="nc_component">{{local}}</span>
 </div>
 
-<div class="forecast_days">
-    <div class="forecast_day nc_component" ng-repeat="forecast in forecasts">    
+<div id="forecast_days" class="component_group">
+    <div class="forecast_day nc_component_group" ng-repeat="forecast in forecasts">    
         <div class="date">
-            {{forecast.date.month}}/{{forecast.date.day}}
+            <span class="nc_component">
+                {{forecast.date.month}}/{{forecast.date.day}}
+            </span>
         </div>
         
-        <div class="graphic">
-            <img ng-src="{{forecast.icon_url}}">
+        <div class="image">
+            <span class="nc_component">
+                <img ng-src="{{forecast.icon_url}}">            
+            </span>
         </div>
         
         <div class="conditions">
-            {{forecast.conditions}}
+            <span class="nc_component">
+                {{forecast.conditions}}            
+            </span>
         </div>
         
-        <div class="temperature nc_component">          
+        <div class="temperature nc_component_group">          
             <div class="high_low high">
-                <div class="component_label">
+                <div class="nc_label pre">
                     High
                 </div>
-                <div class="metric">
+                <div class="metric nc_component">
                     {{forecast.high.celsius}} &#8451
                 </div>
                 
-                <div class="imperial">
+                <div class="imperial nc_component">
                     {{forecast.high.fahrenheit}} &#8457
                 </div>
             </div>
                 
-            <div class="high_low low">
-                <div class="component_label">
+            <div class="high_low low nc_component_group">
+                <div class="nc_label pre">
                     Low
                 </div>
-                <div class="metric">
+                <div class="metric nc_component">
                     {{forecast.low.celsius}} &#8451
                 </div>
             
-                <div class="imperial">
+                <div class="imperial nc_component">
                     {{forecast.low.fahrenheit}} &#8457
                 </div>
             </div>
