--- a/styles/clients/demo.scss
+++ b/styles/clients/demo.scss
@@ -4,8 +4,6 @@ $medium_contrast_color: #333;
 $light_contrast_color: lightgrey;
 $background_color: white;
 
-
-
 body{
 	background-color: $dark_contrast_color;
 }
@@ -79,7 +77,7 @@ body{
   
   #duration{
     padding-left: 30px;
-    .component_label{
+    .nc_label{
       display: none;
     }
   }
@@ -88,23 +86,22 @@ body{
     position: absolute;
     top: 40px;
     left: 100px;
-    
   }
   
-  // #message_list{
-    // position: absolute;
-    // top: 50px;
-    // left: 170px;
-    // // margin-bottom: 300px;
-    // // padding-left: 100px;
-    // .message_name{
-      // display: block;
-      // font-size: 18pt;
-    // }
-    // .message_name.active{
-      // color: $light_contrast_color; 
-    // }
-  // }
+  #message_list{
+    position: absolute;
+    top: 50px;
+    left: 170px;
+    // margin-bottom: 300px;
+    // padding-left: 100px;
+    .message_name{
+      display: block;
+      font-size: 18pt;
+    }
+    .message_name.active{
+      color: $light_contrast_color; 
+    }
+  }
   
   #message_list{
     display: none;
@@ -126,7 +123,7 @@ body{
       font-size: 16pt;
     }
     
-    .component_label.pre{
+    .nc_label.pre{
       display: none;
     }
      
@@ -227,7 +224,7 @@ body{
       font-size: 22px;
       text-transform: capitalize;
       
-      .component_label{
+      .nc_label{
         color: $light_contrast_color;
       }
     }
@@ -271,7 +268,7 @@ body{
         font-size: 20px;
         text-align: center;
         
-        .component_label{
+        .nc_label{
           font-weight: 600;  
         }
         
@@ -296,6 +293,7 @@ body{
 
   }
 }
+
 #ticker1{
   font-weight: 100%;
   font-size: 14pt;
@@ -333,8 +331,8 @@ body{
 // }
 
 //--- Globals ---
-.nc_component{
-  font-size: 40px;
+.nc_component, .nc_control{
+  font-size: 30pt;
 }
 
 .click_control{
