--- a/partials/forecasts.html
+++ b/partials/forecasts.html
@@ -2,7 +2,7 @@
     <span class="nc_component">{{local}}</span>
 </div>
 
-<div id="forecast_days" class="component_group">
+<div id="forecast_days" class="nc_component_group">
     <div class="forecast_day nc_component_group" ng-repeat="forecast in forecasts">    
         <div class="date">
             <span class="nc_component">
