--- a/styles/clients/demo.css
+++ b/styles/clients/demo.css
@@ -92,9 +92,6 @@ body {
 #page_number_seperator, #total_pages {
   display: none; }
 
-#weather_components {
-  display: none; }
-
 .metric {
   display: none; }
 
@@ -125,54 +122,58 @@ body {
   color: white;
   width: 25%;
   left: 0; }
-  #weather .weather_local {
+  #weather .nc_label {
+    font-size: 16pt; }
+  #weather #weather_local .nc_component {
     padding-left: 10px;
     font-weight: 800;
-    font-size: 28px; }
+    font-size: 24pt; }
   #weather .feels_like {
     text-transform: capitalize; }
-  #weather .weather_detail_components .nc_component {
+  #weather #weather_detail_components .nc_component {
     padding-left: 10px;
     font-size: 22px;
     text-transform: capitalize; }
-    #weather .weather_detail_components .nc_component .nc_label {
+    #weather #weather_detail_components .nc_component .nc_label {
       color: lightgrey; }
 
 #weather_forecast {
   position: absolute;
   top: 690px; }
-  #weather_forecast .forecast_local {
+  #weather_forecast #forecast_local {
     display: none; }
-  #weather_forecast .forecast_days {
+  #weather_forecast #forecast_days {
     margin-top: 40px;
     padding-left: 2px; }
-    #weather_forecast .forecast_days .forecast_day {
+    #weather_forecast #forecast_days .forecast_day {
+      border-top: 2px solid black;
+      border-bottom: 2px solid black;
       display: inline-block;
       margin-left: 7px;
-      margin-right: 7px;
-      border-top: 2px solid black;
-      border-bottom: 2px solid black; }
-      #weather_forecast .forecast_days .forecast_day .date {
-        text-align: center;
-        font-size: 20pt; }
-      #weather_forecast .forecast_days .forecast_day .graphic {
+      margin-right: 7px; }
+      #weather_forecast #forecast_days .forecast_day .date {
         text-align: center; }
-      #weather_forecast .forecast_days .forecast_day .conditions {
-        font-size: 12pt;
+        #weather_forecast #forecast_days .forecast_day .date .nc_component {
+          font-size: 28pt; }
+      #weather_forecast #forecast_days .forecast_day .image {
+        text-align: center; }
+      #weather_forecast #forecast_days .forecast_day .conditions .nc_component {
+        font-size: 13pt;
         margin-bottom: 10px; }
-      #weather_forecast .forecast_days .forecast_day .high_low {
-        font-size: 20px;
+      #weather_forecast #forecast_days .forecast_day .high_low {
         text-align: center; }
-        #weather_forecast .forecast_days .forecast_day .high_low .nc_label {
+        #weather_forecast #forecast_days .forecast_day .high_low .nc_component {
+          font-size: 20px; }
+        #weather_forecast #forecast_days .forecast_day .high_low .nc_label {
           font-weight: 600; }
-    #weather_forecast .forecast_days .high_low {
+    #weather_forecast #forecast_days .high_low {
       display: inline-block; }
 
 .nc_ticker {
   width: 100%; }
 
 #ticker1 {
-  font-weight: 100%;
+  font-weight: 600;
   font-size: 14pt;
   background-color: red;
   position: absolute;
