--- a/styles/clients/demo.scss
+++ b/styles/clients/demo.scss
@@ -163,7 +163,7 @@ body{
 
 //--- Weather ---
 #weather_components{
-  display: none;
+  // display: none;
 }
 
 .metric{
@@ -200,6 +200,7 @@ body{
 }
 
 #weather{
+
   position: absolute;
   top: 220px;
   padding-top: 20px;
@@ -208,17 +209,25 @@ body{
   color: $background_color;
   width: 25%;
   left: 0;
-  .weather_local{
+  
+  .nc_label{
+    font-size: 16pt;
+  }
+
+  #weather_local{
+    .nc_component{
     padding-left: 10px;
     font-weight: 800;
-    font-size: 28px;
+    font-size: 24pt;
+      
+    }
   }
   
   .feels_like{
     text-transform: capitalize;
   }
   
-  .weather_detail_components{
+  #weather_detail_components{
     .nc_component{
       padding-left: 10px;
       font-size: 22px;
@@ -231,43 +240,55 @@ body{
   }
 }
 
+
 #weather_forecast{ 
   position: absolute;
   top: 690px;
-  .forecast_local{
+  #forecast_local{
     display: none;
   }
   
-  .forecast_days{
+  #forecast_days{
     margin-top: 40px;
     padding-left: 2px;
     
     .forecast_day{
+      
+      
+      border-top: 2px solid $dark_contrast_color;
+      border-bottom: 2px solid $dark_contrast_color;
       display: inline-block;
       margin-left: 7px;
       margin-right: 7px;
       
-      border-top: 2px solid $dark_contrast_color;
-      border-bottom: 2px solid $dark_contrast_color;
       
       .date{
-        text-align: center;
-        font-size: 20pt;        
+                  text-align: center;
+        .nc_component{
+
+          font-size: 28pt;        
+          
+        }
       }
       
-      .graphic{
+      .image{
         text-align: center;
       }
       
       .conditions{
-        font-size: 12pt;
+        .nc_component{
+        font-size: 13pt;
         margin-bottom: 10px;
+        }
       }
       
       .high_low{
-        font-size: 20px;
-        text-align: center;
+        .nc_component{
+          font-size: 20px;
+          
+        }
         
+        text-align: center;
         .nc_label{
           font-weight: 600;  
         }
@@ -295,7 +316,7 @@ body{
 }
 
 #ticker1{
-  font-weight: 100%;
+  font-weight: 600;
   font-size: 14pt;
   background-color: red;
   position: absolute;
