--- a/partials/message.html
+++ b/partials/message.html
@@ -4,9 +4,9 @@
     </span>
 </div> 
 
-<div id="message">
+<div id="message"> 
     <div class="nc_component">
-        <div ng-bind-html="message" message></div>
+        <div id="message_inner" draggable="true" ng-bind-html="message" message></div>
     </div>
 </div>
 
