--- a/partials/message.html
+++ b/partials/message.html
@@ -6,7 +6,7 @@
 
 <div id="message"> 
     <div class="nc_component">
-        <div id="message_inner" draggable="true" ng-bind-html="message" message></div>
+        <div id="message_inner" ng-bind-html="message" message></div>
     </div>
 </div>
 
