--- a/styles/app.css
+++ b/styles/app.css
@@ -5,16 +5,18 @@
   overflow: hidden; }
   #new_city_player #message_container {
     overflow: hidden; }
-  #new_city_player #message .nc_component {
-    overflow: hidden;
-    position: relative;
-    height: 100%; }
-  #new_city_player #message p:first-child {
-    margin-top: 0px; }
-  #new_city_player #message .ppt_image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto; }
+  #new_city_player #message {
+    position: relative; }
+    #new_city_player #message .nc_component {
+      overflow: hidden;
+      position: relative;
+      height: 100%; }
+    #new_city_player #message p:first-child {
+      margin-top: 0px; }
+    #new_city_player #message .ppt_image {
+      display: block;
+      margin-left: auto;
+      margin-right: auto; }
   #new_city_player .click_control, #new_city_player .select_control, #new_city_player .nc_ticker {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
