--- a/styles/app.css
+++ b/styles/app.css
@@ -16,6 +16,8 @@
       display: block;
       margin-left: auto;
       margin-right: auto; }
+  #new_city_player #message_name {
+    z-index: 20; }
   #new_city_player .click_control, #new_city_player .select_control, #new_city_player .nc_ticker, #new_city_player #message {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
