--- a/styles/app.scss
+++ b/styles/app.scss
@@ -5,7 +5,7 @@
   overflow: hidden;
   
   #message_container{
-    overflow: hidden;
+    overflow: hidden;   
   }
   
   
@@ -16,6 +16,7 @@
       // overflow: hidden;
     }
     
+        
     
     .nc_component{
       // overflow:hidden;   
@@ -35,6 +36,10 @@
       margin-right: auto;
     }
     
+  }
+  
+  #message_name{
+    z-index: 20;
   }
 
 
